--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                     <a  class="link-button" target="-blank" href="https://www.linkedin.com/feed/">Hier Me</a>
                 </div>
                 <div class="child_dic_1">
-                    <div class="img"><a href="#"><img src="IMG_20190308_15112227.png" alt=""></a></div>
+                    <div class="img"><a href="#"><img src="images/IMG_20190308_15112227.png" alt=""></a></div>
                 </div>
             </div>
         </div>
@@ -30,7 +30,7 @@
         <div class="container_2">
             <div class="row_2">
                 <div class="r_2_child_row_1">
-                    <div class="child_img"><a href="#"><img src="IMG_20190308_15112227 (1).png" alt=""></a></div>
+                    <div class="child_img"><a href="#"><img src="images/IMG_20190308_15112227 (1).png" alt=""></a></div>
                 </div>
                 <div class="r_2_child_row_2">
                     <h1>Dream Big!</h1>
