--- a/index.html
+++ b/index.html
@@ -41,23 +41,28 @@
             </div>
         </div>
     </section>
-    <footer class="footer_section"> 
-        <div class="container_f">
-            <div class="row_f">
-                <h1>Experiences</h1>
-                <div class="f_child_1">
-                    <h1>Full Stack Web Developer</h1>
-                    <h3>2021 - Present | Pro level Web Developer</h3>
-                    <p>I know HTML, CSS, JAVASCRIPT, MERN Stack development. I can develop large scale web applications. I know myself as a thrive in a team, hard working person and I have good time sense and discipline</p>
+
+    <div class="experinces">
+        <div class="container_3">
+            <div class="row_3">
+                <h1 class="titel">Experinces</h1>
+                <div id="border_left" class="info_left">
+                    <div  class="box_1">
+                        <h2>Full Stack Web Developer</h2>
+                        <h3>2021 - Present | Pro level Web Developer</h3>
+                        <p>I know HTML, CSS, JAVASCRIPT, MERN Stack development. I can develop large scale web applications. I know myself as a thrive in a team, hard working person and I have good time sense and discipline</p>
+                    </div>
                 </div>
-                <div class="f_child_2">
-                    <h1>Baby Web Developer</h1>
-                    <h3>2020 - 2021 | Programming Hero Learner</h3>
-                    <p>I learned HTML, CSS, JAVASCRIPT, MERN Stack development from Programming Hero to become a Professional Full stack Web Developer.</p>
+                <div class="info_right">
+                    <div class="box_1">
+                        <h2>Full Stack Web Developer</h2>
+                        <h3>2021 - Present | Pro level Web Developer</h3>
+                        <p>I know HTML, CSS, JAVASCRIPT, MERN Stack development. I can develop large scale web applications. I know myself as a thrive in a team, hard working person and I have good time sense and discipline</p>
+                    </div>
                 </div>
             </div>
         </div>
-    </footer>
+    </div>
 </body>
 </html>
 
