--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         </div>
     </section>
 
-    <div class="experinces">
+    <div id="experinces">
         <div class="container_3">
             <div class="row_3">
                 <h1 class="titel">Experinces</h1>
@@ -53,8 +53,8 @@
                         <p>I know HTML, CSS, JAVASCRIPT, MERN Stack development. I can develop large scale web applications. I know myself as a thrive in a team, hard working person and I have good time sense and discipline</p>
                     </div>
                 </div>
-                <div class="info_right">
-                    <div class="box_1">
+                <div id="border_right" class="info_right">
+                    <div id="border_2" class="box_1">
                         <h2>Full Stack Web Developer</h2>
                         <h3>2021 - Present | Pro level Web Developer</h3>
                         <p>I know HTML, CSS, JAVASCRIPT, MERN Stack development. I can develop large scale web applications. I know myself as a thrive in a team, hard working person and I have good time sense and discipline</p>
@@ -63,6 +63,53 @@
             </div>
         </div>
     </div>
+    <section id="about_me">
+        <div class="container_about">
+            <div class="row_about">
+                <div class="about_me">
+                   <div class="name">
+                       <h4>Miraz Hasan</h4>
+                       <div class="sub_name">
+                            <ul>
+                                <li><a href="#"> <p>Chittagong</p><p>Bangladesh</p></a></li>
+                            </ul>
+                       </div>
+                   </div>
+                   <div class="email">
+                       <h4>Emal</h4>
+                       <div class="sub_email">
+                            <ul>
+                                <li>
+                                    <a href="#">
+                                        <p>rtrmiraz@gmail.com</p>
+                                    </a>
+                                </li>
+                            </ul>
+                       </div>
+                   </div>
+                   <div class="number">
+                       <h4>Number</h4>
+                       <div class="sub_number">
+                           <ul>
+                               <li>
+                                   <a href="#">
+                                       <p>+8801724242424</p>
+                                   </a>
+                               </li>
+                           </ul>
+                       </div>
+                   </div>
+                </div>
+                <div class="contract_me">
+                    <div class="f_1"><a target="_blank" href="#"><img src="images/tw.PNG" alt=""></a></div>
+                    <div class="f_1"><a target="_blank" href="#"><img src="images/insta.PNG" alt=""></a></div>
+                    <div class="f_1"><a target="_blank" href="#"><img src="images/yt.PNG" alt=""></a></div>
+                    <div class="f_1"><a target="_blank" href="#"><img src="images/fb.PNG" alt=""></a></div>
+                    
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
 
