--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div class="container_1">
             <div class="row_1">
                 <div class="child_div_1">
-                    <h1>WElCOME TO </h1>
+                    <h1>WElCOME TO  new</h1>
                     <h1 class="hilite">
                         <spam>Miraz Hasan</spam> web site
                     </h1>
